// user.proto
syntax = "proto3";

package userservice;

option go_package = "example/userservice";

service UserService {
  rpc CreateUser (CreateUserRequest) returns (User) {}
  rpc GetUser (GetUserRequest) returns (User) {}
}

message User {
  string id = 1;
  string name = 2;
  string email = 3;
}

message CreateUserRequest {
  string name = 1;
  string email = 2;
}

message GetUserRequest {
  string id = 1;
}